[gd_scene load_steps=10 format=3 uid="uid://bu6534pr6npo6"]

[ext_resource type="Script" path="res://scenes/Player.gd" id="1_w2s8h"]
[ext_resource type="Texture2D" uid="uid://b6cvdyp5jkshu" path="res://assets/tutorial-5/player_tilesheet.png" id="2_jyf1o"]
[ext_resource type="AudioStream" uid="uid://c8kgxjwora8c3" path="res://assets/tutorial-5/sfx_gg.wav" id="3_02uuw"]
[ext_resource type="AudioStream" uid="uid://dg1ankvo12dx6" path="res://assets/tutorial-5/751340__qubodup__slime-death.ogg" id="4_ahsgj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hdo0g"]
size = Vector2(62, 92)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0ggj"]
atlas = ExtResource("2_jyf1o")
region = Rect2(0, 0, 80, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_rexij"]
atlas = ExtResource("2_jyf1o")
region = Rect2(0, 110, 80, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_4esr8"]
atlas = ExtResource("2_jyf1o")
region = Rect2(80, 110, 80, 110)

[sub_resource type="SpriteFrames" id="SpriteFrames_7ln5p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0ggj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rexij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4esr8")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_w2s8h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 8)
shape = SubResource("RectangleShape2D_hdo0g")

[node name="DashCheck" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashDuration" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7ln5p")
animation = &"run"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_02uuw")
volume_db = 12.876
pitch_scale = 2.03

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 59)

[node name="EnemyDeathIyaSeharunyaGaTaroSini" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ahsgj")

[connection signal="timeout" from="DashCheck" to="." method="_on_dash_timeout"]
[connection signal="timeout" from="DashDuration" to="." method="_on_dash_duration_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
